# pcre2

./: meson.build  readme.txt  upstream.wrap
